--- a/AirfoilOptimizationTool/MainWindow/MainWindow.xaml
+++ b/AirfoilOptimizationTool/MainWindow/MainWindow.xaml
@@ -201,15 +201,33 @@
                             <Label Content="AirfoilName" VerticalAlignment="Top" FontSize="18" FontWeight="Bold"/>
                         </Grid>
                     </TabItem>
-                    <TabItem Header="TabItem">
-                        <Grid/>
+                    <TabItem Header="Parameters">
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="34"/>
+                                <RowDefinition Height="2*"/>
+                                <RowDefinition Height="3*"/>
+                            </Grid.RowDefinitions>
+                            <Label Content="Optimization Parameters" VerticalAlignment="Top" FontSize="18" FontWeight="Bold" Height="34" Margin="-1,-1,1,0"/>
+                            <Border BorderBrush="Black" BorderThickness="1" Margin="5,10" Grid.Column="0" Grid.Row="1">
+                                <Canvas behavior:CanvasSizeBehavior.EnableSize="True"
+                                        behavior:CanvasSizeBehavior.Size="{Binding detailCanvasSize, Mode=OneWayToSource}" Margin="0,0,0,-1">
+                                    <Polyline Stroke ="Black" StrokeThickness="1" />
+                                </Canvas>
+                            </Border>
+                            <DataGrid Margin="5,0,5,30" Grid.Row="2" ColumnWidth="*" ColumnHeaderHeight="25" CanUserSortColumns="False" CanUserReorderColumns="False" CanUserAddRows="False" CanUserDeleteRows="False"
+                                      ItemsSource="{Binding optimizationParameters, Mode=TwoWay, UpdateSourceTrigger=LostFocus}" AutoGenerateColumns="True" AlternationCount="1" />
+                            <Button Content="Edit" HorizontalAlignment="Right" Margin="0,0,5,5" Grid.Row="2" VerticalAlignment="Bottom" Width="75"/>
+                        </Grid>
                     </TabItem>
                 </TabControl>
             </Grid>
             <GridSplitter Margin="0,10" Grid.Row="2" Width="5"/>
         </Grid>
         <Menu Height="20" VerticalAlignment="Top">
-            <MenuItem Header="File (_F)"/>
+            <MenuItem Header="File (_F)">
+                <MenuItem Header="Preferences"/>
+            </MenuItem>
             <MenuItem Header="Edit (_E)"/>
             <MenuItem Header="GeneticAlgorithm (_G)">
                 <MenuItem Header="Configuration" Command="{Binding showGAConfigurationDialog}"/>
